--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -1,13 +1,28 @@
-# Tmux Configuration for Claude Code Remote Access
+#
+# Requirements
+# brew install reattach-to-user-namespace
+# brew install fzf
+#
 
-# Enable mouse support for iPhone terminal apps
+# Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-# Set default terminal
-set -g default-terminal "screen-256color"
+# make tmux display things in 256 colors
+#set -g default-terminal "tmux-256color"
+#set -g default-terminal "xterm-256color"
+#set -g default-terminal "screen-256color"
 
-# Enable vi mode for easier navigation on mobile
-setw -g mode-keys vi
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+bind v split-window -h
+bind s split-window
+
+bind r source-file ~/.tmux.conf \; display "Reloaded config"
+
+
+bind -n S-Enter send-keys Escape "[13;2u"
 
 # Increase history limit for scrollback
 set -g history-limit 50000
@@ -19,44 +34,69 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
-# Display tmux session info longer
-set -g display-time 4000
-set -g display-panes-time 800
+# window
+bind w choose-tree
 
-# Status line customization for Claude sessions
-set -g status-interval 5
-set -g status-left-length 50
-set -g status-right-length 50
-set -g status-left "#[fg=green]#S #[fg=yellow]#I:#P "
-set -g status-right "#[fg=cyan]%H:%M %d-%b"
 
-# Highlight active window
-set -g window-status-current-style "fg=white,bg=blue"
 
-# Key bindings for easier mobile use
-# Prefix key (default is C-b)
-set -g prefix C-b
 
-# Quick session switching
-bind-key s choose-tree -Zs
+# switch panes using Alt-arrow without prefix
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
-# Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+# shorten command delay
+set -sg escape-time 0
 
-# Pane navigation
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+#
+# Copy and paste
+#
 
-# Window navigation
-bind-key -n C-Left previous-window
-bind-key -n C-Right next-window
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy' \; send -X clear-selection
 
-# Copy mode bindings (vi-style)
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# Session management shortcuts
-bind-key N command-prompt -p "New session name:" "new-session -d -s '%%'"
-bind-key K confirm-before -p "Kill session #S? (y/n)" kill-session
+
+#
+# Status line
+#
+
+set -g status on
+set -g status-interval 1
+set -g status-left-length 20
+set -g status-left "#[fg=colour233,bg=colour249,bold,noitalics,nounderscore] #S "
+set -g status-right-length 80
+set -g status-right '#{?client_prefix,#[bg=colour31],} %a %Y-%m-%d %H:%M'
+set -g window-status-format "#[fg=colour244,nobold,noitalics,nounderscore] #I:#[default]#W "
+set -g window-status-current-format "#[fg=colour117,bg=colour31,nobold,noitalics,nounderscore] #I:#[fg=colour231,bg=colour31,bold,noitalics,nounderscore]#W "
+set-option -qg status-style "fg=colour231"
+set-option -qg window-status-last-style "fg=colour239"
+set-window-option -qg window-status-style "fg=colour239"
+set-window-option -qg window-status-activity-style "fg=colour11"
+set-window-option -qg window-status-bell-style "fg=colour1"
+
+
+
+
+#
+# Plugins
+#
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jaclu/tmux-menus
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+
+
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
+
+
+
+
